# opencv_3d

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: Cassette_GT_.ply-sampled-0.2.ply-labels.txt  lidar_zhiren_college.ply
include/opencv2/opencv_3d/: plane_utils.hpp  ptcloud_utils.hpp  sampling.hpp  segmentation.hpp
samples/: samples.cpp  samples.hpp  utils.cpp  utils.hpp
samples/misc/python/: Pointcloud-Visualization-With-Open3D.py
src/: plane_utils.cpp  ptcloud_utils.cpp  sampling.cpp  segmentation.cpp
test/: test_precomp.hpp  test_rac_fit_plane.cpp  test_sampling.cpp  test_tls.cpp  test_utils.cpp  test_utils.hpp
